--- a/index.css
+++ b/index.css
@@ -35,3 +35,16 @@
 .float-lg-right{
     justify-content: space-between;
 }
+.map-container{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    }
+.map-container iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
