--- a/index.css
+++ b/index.css
@@ -18,12 +18,8 @@
 .carousel-caption p{
     vertical-align: center;
 }
-.foot{
+.page-footer{
     background-color: rgb(56, 51, 51);
-}
-.copyright{
-    color: white;
-    text-align: center;
 }
 .link a{
     color: white;
@@ -47,4 +43,34 @@
     height:100%;
     width:100%;
     position:absolute;
+}
+.image{
+    /* Container holding the image and the text */
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.btn {
+    position: absolute;
+    top: 98%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgb(235, 164, 32);
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+   /* border-radius: 5px;*/
+    text-align: center;
+}
+.btn:hover {
+    background-color: grey;
 }
