--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.btn {
+.bt{
     position: absolute;
     top: 98%;
     left: 50%;
@@ -71,6 +71,16 @@
    /* border-radius: 5px;*/
     text-align: center;
 }
-.btn:hover {
+.bt:hover {
     background-color: grey;
 }
+.bottom-left {
+    position: absolute;
+    bottom: 40px;
+    left: 70px;
+}
+.bottom-right {
+    position: absolute;
+    bottom: 25px;
+    right: 140px;
+  }
